[package]
name = "ironWeb"
version = "0.1.0"
authors = ["霧島ひなた <mastodon@krsm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
